make-a-wish-salesforce/src/objects/Product_Release_Document__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This article type will be used to store release notes, product road map, and general wish and volunteer center internal documentation.</description>
    <fields>
        <fullName>Attacment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Release Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Road Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Release Document</label>
    <pluralLabel>Product Release Documents</pluralLabel>
</CustomObject>